--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="container">
           <form action="action_page.php">
         
-            <label for="fname">First Name</label>
+            <label for="fname">Sender Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
         
             <label for="lname">Last Name</label>
