--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <label for="subject">SMS Body</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
         
-            <submit id="btn_send" class="button">Submit<submit>
+            <submit id="btn_send" class="button">Send<submit>
         
           </form>
         </div>
