--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
     <section class="contact-from">
       <div class="feature__content container container--pall">
         <div class="feature__intro">
-          <h2>Contact Form</h2>
+          <h2>Send test sms</h2>
           <p>
-            We want to hear from you! Please indicate the email used for your
-            Floppy service login if you already have an account. Looking forward to
-            your message..
+            You can send an SMS using a messaging service. This is just for testing to see if our sms portal works fine for you.
           </p>
         </div>
 
