--- a/index.html
+++ b/index.html
@@ -143,12 +143,11 @@
             <label for="lname">Phone Number</label>
             <input type="text" id="lname" name="lastname" placeholder="+25261*******">
         
-<!--             <label for="country">Country</label>
-            <select id="country" name="country">
-              <option value="australia">Australia</option>
-              <option value="canada">Canada</option>
-              <option value="usa">USA</option>
-            </select> -->
+            <label for="type">SMS Type</label>
+            <select id="type" name="type">
+              <option value="single">Single</option>
+              <option value="canada">Group</option>
+            </select> 
         
             <label for="subject">SMS Body</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
