--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           
           $("#info").load("http://saabirm433-001-site1.itempurl.com/test.php",{sender:senderName,phone:phoneNumber,body:smsBody}, function(responseTxt, statusTxt, xhr){
                   if(statusTxt == "success"){
-                    // console.log(responseTxt)
+                    console.log(responseTxt)
                     if(responseTxt.error_code == null){
                       swal("Message sent successfully", "Your message has been delivered", "success");
                     }
