--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             return;
           }
           
-          $("#info").load("http://saabirm433-001-site1.itempurl.com/test.php",{sender:senderName,phone:phoneNumber,body:smsBody}, function(responseTxt, statusTxt, xhr){
+          $("#info").load("http://saabirm433-001-site1.itempurl.com/demo.php",{sender:senderName,phone:phoneNumber,body:smsBody}, function(responseTxt, statusTxt, xhr){
             console.log(responseTxt)      
             if(statusTxt == "success"){
                     
