--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             return;
           }
           
-          $("#info").load("http://saabirm433-001-site1.itempurl.com/demo.php",{sender:senderName,phone:phoneNumber,body:smsBody}, function(responseTxt, statusTxt, xhr){
+          $("#info").load("http://saabirm433-001-site1.itempurl.com/demo.php",{sender:senderName,phone:phoneNumber,body:smsBody,type:sms_type}, function(responseTxt, statusTxt, xhr){
             console.log(responseTxt)      
             if(statusTxt == "success"){
                     
