--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
           var senderName = document.getElementById('fname').value;
           var phoneNumber = document.getElementById('lname').value;
           var smsBody = document.getElementById('subject').value;
+          var sms_type = document.getElementById('type').value;
           if(senderName == ''){
             alert('Please enter sender name');
             return;
