--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             Get our Free Bulk SMS APIs upon registeration and quickly start 
             integration of our Services with your business to get the best of it.
           </p>
-          <a href="#" class="button hero__cta">Sign Up Now</a>
+          <a href="http://saabirm433-001-site1.itempurl.com/SMS-portal/auth-register.php" target="_blank"" class="button hero__cta">Sign Up Now</a>
         </div>
       </div>
     </section>
